# bitfinex-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
src/: account.rs  api.rs  auth.rs  book.rs  candles.rs  client.rs  currency.rs  endpoints.rs  errors.rs  events.rs  ledger.rs  lib.rs  orders.rs  pairs.rs  positions.rs  responses.rs  ticker.rs  trades.rs  websockets.rs
