[package]
name = "bitfinex"
version = "0.5.0"
license = "Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Giulio De Pasquale <depasquale@giugl.io>"]

description = "Rust Library for the Bitfinex API"
keywords = ["cryptocurrency", "trading", "bitcoin"]
documentation = "https://docs.rs/crate/bitfinex/"
repository = "https://github.com/wisespace-io/bitfinex-rs"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "peperunas/bitfinex-rs" }

[lib]
name = "bitfinex"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.12"
ring = "0.16"
reqwest = "0.11"
url = "2.1"
log = "0.3"
tungstenite = "0.12"
chrono = "0.4"
bitflags = "1.2"
tokio = {version = "1", features = ["time"]}
rand = "0.8"